snackflow-testing-deployment/kubernetes/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snackflow-prod
  labels:
    name: snackflow-prod
    environment: production
